# pytest-pudb-resurrected

./: .gitignore  README.md  README.rst  noxfile.py  pyproject.toml  pytest_pudb.py  test_pytest_pudb.py
.github/workflows/: ci.yml
