[project]
name = "pytest-pudb-resurrected"
version = "0.1.0"
description = "Pytest PuDB debugger integration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Michael Elovskikh", email = "wronglink@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0",
    "pudb",
]

[project.optional-dependencies]
dev = [
    "nox",
    "pexpect",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sander76/pytest-pudb-resurrected"
Repository = "https://github.com/sander76/pytest-pudb-resurrected.git"
Changelog = "https://github.com/sander76/pytest-pudb-resurrected/blob/main/HISTORY.rst"
"Bug Tracker" = "https://github.com/sander76/pytest-pudb-resurrected/issues"

[project.entry-points.pytest11]
pudb = "pytest_pudb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["pytest_pudb.py"]

[tool.hatch.build.targets.sdist]
include = [
    "pytest_pudb.py",
    "README.md",
    "HISTORY.rst",
    "LICENSE",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
